conformance/0.1/expected/errors/invalid-nested-compact-pipe.cdx
<ExpectedError category=~syntax reason=~gloss-syn-invalid-nested-compact-pipe/>
